# enterprise-agent-platform

./: .gitignore  .gitmodules  AGENTS.md  README.md  SECURITY_AUDIT.md  deploy.sh  install.sh
enterprise-agent-platform/: README.md  pyproject.toml
enterprise-agent-platform/agent-runtime/: README.md  package-lock.json  package.json  tsconfig.json
enterprise-agent-platform/agent-runtime/src/: approval-broker.ts  approval-policy.ts  config.ts  container-contract.generated.ts  event-journal.ts  executor.ts  index.ts  legacy-session-importer.ts  model-resolver.ts  persistence.ts  platform-gateway.ts  process-registry.ts  run-coordinator.ts  server.ts  (+5 more)
enterprise-agent-platform/camofox-runtime/: loopback-preload.cjs  package-lock.json  package.json  patch-runtime.cjs
enterprise-agent-platform/enterprise_agent_platform/: __init__.py  __main__.py  agent_inputs.py  agent_runtime_client.py  agent_scopes.py  auth.py  auto_update.py  cognee_bridge.py  config.py  container_contract_generated.py  containers.py  db.py  deployment.py  design_contract_generated.py  gateway.py  hermes.py  hermes_oauth_bridge.py  hermes_relay.py  internal_config.py  jobs.py  knowledge.py  legacy_migration.py  loopback_http.py  manager_client.py  memory_security.py  model_catalog.py  oauth_flows.py  prompt_security.py  runtimes.py  schedules.py  secure_fs.py  server.py  service.py  skills.py  telegram_gateway.py  update_state.py  upstream_source_validation.py  upstream_sources_generated.py
enterprise-agent-platform/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
enterprise-agent-platform/hermes_plugin/: __init__.py
enterprise-agent-platform/tests/: test_agent_runtime_client.py  test_agent_scopes.py  test_auto_update_coordination.py  test_backend_performance.py  test_browser_preview.py  test_camofox_e2e.py  test_cli.py  test_deployment.py  test_docs_sync.py  test_gateway.py  test_hermes_oauth_bridge.py  test_http_config_worker.py  test_jobs.py  test_knowledge_db.py  test_legacy_migration.py  test_loopback_http.py  test_managed_runtime_security.py  test_manager_client.py  test_memory_session_search.py  test_model_catalog.py  test_oauth_more.py  test_platform.py  test_preview_status.py  test_prompt_security.py  test_review_regressions.py  test_runtime_lifecycle_more.py  test_runtime_packaging.py  test_schedules.py  test_searxng_search.py  test_secure_fs.py  test_security_hardening.py  test_skill_integration.py  test_skills.py  test_streaming_resilience.py  test_telegram_gateway_lifecycle.py  test_terminal_previews.py  test_update_state.py
(+1022 files in other folders)
