[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "enterprise-agent-platform"
version = "0.1.0"
description = "Web platform for shared and private ubitech agent instances with a platform-owned Agent runtime."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "ubitech agent" }]
license = { text = "MIT" }
dependencies = []

[project.scripts]
enterprise-agent-platform = "enterprise_agent_platform.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["enterprise_agent_platform*"]
namespaces = true

[tool.setuptools.package-data]
enterprise_agent_platform = [
  "static/*",
  "bundled_skills/**/*",
]

[tool.setuptools.exclude-package-data]
enterprise_agent_platform = [
  "bundled_skills/**/__pycache__/*",
  "bundled_skills/**/*.pyc",
  "bundled_skills/**/*.pyo",
]

# The managed Node.js runtime is installed outside site-packages so npm can
# materialize its locked dependencies and build it in the platform data
# directory. Keep the source tree intact in both wheels and source archives.
[tool.setuptools.data-files]
"share/ubitech-agent/agent-runtime" = [
  "agent-runtime/README.md",
  "agent-runtime/package.json",
  "agent-runtime/package-lock.json",
  "agent-runtime/tsconfig.json",
]
"share/ubitech-agent/agent-runtime/src" = [
  "agent-runtime/src/*.ts",
]
"share/ubitech-agent/agent-runtime/test" = [
  "agent-runtime/test/*.ts",
]
"share/ubitech-agent/camofox-runtime" = [
  "camofox-runtime/package.json",
  "camofox-runtime/package-lock.json",
  "camofox-runtime/loopback-preload.cjs",
  "camofox-runtime/patch-runtime.cjs",
]
